# test_cmake_vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeSettingsA.json  README.MD  build.bat  libcurl_ftp.cpp  main.cpp  vcpkg.json
